<resources>
    <string name="app_name">TP Domotica</string>

    <string name="logout">Cerrar sesión</string>
    <string name="continuar">Continuar</string>

    <!-- Login -->
    <string name="welcome">Bienvenido</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember">Recuérdame</string>
    <string name="ingresar">Ingresar</string>
    <string name="noacc">No tenés cuenta? Crea una</string>

    <!-- Registro -->
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="pwd_repeat">Repetir contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="already">Ya eres miembro? Iniciar sesión</string>

    <!-- Alta edificio -->
    <string name="crear_edi">Registrar edificio</string>
    <string name="sens_dis">Sensores Activos</string>
    <string name="direccion">Dirección</string>
    <string name="ubicacion">Ubicación</string>
    <string name="use_gps">Usar GPS</string>
    <string name="guardar">Guardar</string>

    <string name="ver_edi">Ver edificios</string>
    <string name="ver_edi_pen">Ver edificios pendientes</string>
    <string name="dire_edi">Dirección del edificio</string>
    <string name="sens_act">Sensores disponibles</string>
    <string name="ver_sens">Ver sensores</string>
    <string name="sensor">Sensor</string>
    <string name="datos_act">Datos actuales</string>
    <string name="valor_actual">Valor actual</string>
    <string name="historico">Histórico</string>
    <string name="alerta">Alerta</string>
    <string name="SinPendientes">No hay edificios pendientes</string>


    <string name="confirm">Confirmar</string>
    <string name="ok">OK</string>
    <string name="settings">Configuración</string>
    <string name="idioma">Seleccione el idioma</string>

    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="frances">Francés</string>
    <string name="italiano">Italiano</string>


    <!-- TODO: Remove or change this placeholder text -->
    <color name="green">#0DB013</color>
    <color name="lila">#916eff</color>
    <color name="lila_claro">#b39afd</color>
    <string name="fecha_suc">Fecha del suceso</string>
    <string name="valor">Valor</string>
    <string name="descripcion">Descripción</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="sure">¿Está seguro que quiere borrar este edificio?</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="temp_act">Temperatura actual:</string>
    <string name="gas_lib">Ambiente libre de gas</string>
    <string name="gas_det">Se detectó gas en el ambiente</string>
    <string name="no_mov">No se detectó movimiento</string>
    <string name="mov_si">Se detectó movimiento</string>
    <string name="ilu_bien">Ambiente bien iluminado</string>
    <string name="suceso">Fecha del suceso</string>
    <string name="agradable">Temperatura agradable</string>
    <string name="alarmante">Temperatura alarmante</string>
    <string name="please_sens">Por favor seleccione al menos un sensor.</string>
    <string name="dire_vacia">La direccion no puede estar vacía</string>
    <string name="nombre_vacio">El nombre no puede estar vacío</string>
    <string name="no_empty">Este campo no puede estar vacío</string>
    <string name="pen_toast">Su edificio está pendiente de aprobación</string>
    <string name="edi_activos">Edificios activos</string>
    <string name="edi_pendientes">Edificios pendientes</string>
    <string name="detalle_edi">Detalle del edificio</string>
    <string name="edificios">Edificios</string>
    <string name="detalle_sensor">Detalles del sensor</string>
    <string name="act_edi">Actualizar edificio</string>
    <string name="no_asoc">No hay edificios asociados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="regis">Registro realizado correctamente</string>
    <string name="no_match">Las contraseñas no coinciden</string>
    <string name="existe">El usuario ya existe en la base de datos</string>
    <string name="wrong_pass">Contraseña incorrecta</string>
    <string name="no_user">Usuario no registrado</string>
    <string name="caluroso">caluroso</string>
    <string name="fresco">Temperatura muy fria</string>
    <string name="refresh">Actualizar</string>
    <string name="summary_lang">Elija el idioma de la aplicación</string>
    <string name="gps_permiso">No se han definido los permisos necesarios</string>
</resources>
