<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/idImagen"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_alert_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alerta"/>
            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_suc"/>
            <TextView
                android:id="@+id/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary"
        android:layout_below="@+id/idImagen"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="10dp"/>

</LinearLayout>