<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#D7D7D7"
        card_view:cardCornerRadius="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/idImagen"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="center | top"
                android:src="@mipmap/ic_edificio_foreground"
                android:scaleType="fitXY"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idNombre"
                    android:layout_marginTop="10dp"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/idInfo"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/descripcion"/>
                <TextView
                    android:id="@+id/idEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Estado: "
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/modificarEdificio"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/modificar"
                        android:textSize="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/lila_claro"/>

                    <Button
                        android:id="@+id/eliminarEdificio"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/eliminar"
                        android:textSize="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/lila_claro"/>

                    <Button
                        android:id="@+id/ubicacionEdificio"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/ubicacion"
                        android:textSize="10dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/lila_claro" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>