<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.DetalleSensorFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lila" />

    <TextView
        android:id="@+id/tituloSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/datosActualesSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_act"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historico"
        android:textSize="30dp"
        android:gravity="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerIDSensorDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/idImagenAlerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_alert_foreground"
                android:layout_marginTop="100dp"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/sms_lista_vacia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text=""
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginTop="-20dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>